Updated build to generate nuget package

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,8 @@ steps:
   inputs:
     testRunner: VSTest
     testResultsFiles: '**/*.trx'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: pack
+    projects: '**/*ApiFramework.csproj'
