--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,6 @@ steps:
   inputs:
     command: pack
     projects: '**/*ApiFramework.csproj'
+
+
+- script: dotnet publish --output $(Build.ArtifactStagingDirectory)
