Updated configuration for generation of artifacts

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,5 +29,7 @@ steps:
     command: pack
     projects: '**/*ApiFramework.csproj'
 
-
-- script: dotnet publish --output $(Build.ArtifactStagingDirectory)
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    artifactName: drop
