Added selector to publish only nuget package

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,3 +33,4 @@ steps:
   inputs:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
     artifactName: drop
+    contents: '**/$(BuildConfiguration)/**/?(*.nupkg)'
