updated implementation of nuget package configuration

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,18 +14,24 @@ steps:
   displayName: 'dotnet build $(buildConfiguration)'
 
 - task: DotNetCoreCLI@2
+  displayName: Restore nuget packages
   inputs:
     command: restore
     projects: '**/*.csproj'
 
 - script: dotnet test **/*.Tests.Unit.csproj --logger trx
 - task: PublishTestResults@2
+  displayName: run tests
   inputs:
     testRunner: VSTest
     testResultsFiles: '**/*.trx'
 
 
-- script: dotnet pack /p:PackageVersion='1.$(Build.BuildId).0'
+- script: dotnet pack --configuration $(buildConfiguration) /p:PackageVersion='1.$(Build.BuildId).0'
+  displayName: Generate nuget package
+  inputs:
+    projects: '**/*ApiFramework.csproj'
+
 
 #- task: DotNetCoreCLI@2
 #  inputs:
@@ -72,6 +78,7 @@ steps:
     #arguments: # Required when command == Custom
 
 - task: PublishBuildArtifacts@1
+  displayName: publish nuget package to artefacts
   inputs:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
     artifactName: drop
