--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,10 +30,8 @@ steps:
   inputs:
       command: pack
       projects: '**/*ApiFramework.csproj'
-      buildProperties: /p:PackageVersion='1..0'
-      requestedMajorVersion: 1
-      requestedMinorVersion: $(Build.BuildId)
-      requestedPatchVersion: 0
+      buildProperties: /p:PackageVersion='1.$(Build.BuildId).0'
+
 
 # - task: DotNetCoreCLI@2
 #   inputs:
