--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
     testResultsFiles: '**/*.trx'
 
 
-- script: dotnet pack /p:PackageVersion='1.$(Build.BuildId).0' --configuration $(buildConfiguration)
+- script: dotnet pack /p:PackageVersion='1.$(Build.BuildId).0' --configuration $(buildConfiguration)  -o $(Build.ArtifactStagingDirectory)
 
 #- task: DotNetCoreCLI@2
 #  inputs:
@@ -33,43 +33,6 @@ steps:
 #    projects: '**/*ApiFramework.csproj'
    # packageVersion:'1.0.$(Build.BuildId)'
 
-# NuGet
-# Restore, pack, or push NuGet packages, or run a NuGet command. Supports NuGet.org and authenticated feeds like Package Management and MyGet. Uses NuGet.exe and works with .NET Framework apps. For .NET Core and .NET Standard apps, use the .NET Core task.
-#- task: NuGetCommand@2
-#  inputs:
-    #command: 'restore' # Options: restore, pack, push, custom
-    #restoreSolution: '**/*.sln' # Required when command == Restore
-    #feedsToUse: 'select' # Options: select, config
-    #vstsFeed: # Required when feedsToUse == Select
-    #includeNuGetOrg: true # Required when feedsToUse == Select
-    #nugetConfigPath: # Required when feedsToUse == Config
-    #externalFeedCredentials: # Optional
-    #noCache: false 
-    #disableParallelProcessing: false 
-    #restoreDirectory: 
-    #verbosityRestore: 'Detailed' # Options: quiet, normal, detailed
-    #packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg' # Required when command == Push
-    #nuGetFeedType: 'internal' # Required when command == Push# Options: internal, external
-    #publishVstsFeed: # Required when command == Push && NuGetFeedType == Internal
-    #allowPackageConflicts: # Optional
-    #publishFeedCredentials: # Required when command == Push && NuGetFeedType == External
-    #verbosityPush: 'Detailed' # Options: quiet, normal, detailed
-    #packagesToPack: '**/*.csproj' # Required when command == Pack
-    #configuration: '$(BuildConfiguration)' # Optional
-    #packDestination: '$(Build.ArtifactStagingDirectory)' # Optional
-    #versioningScheme: 'off' # Options: off, byPrereleaseNumber, byEnvVar, byBuildNumber
-    #includeReferencedProjects: false # Optional
-    #versionEnvVar: # Required when versioningScheme == ByEnvVar
- #   majorVersion: '1' # Required when versioningScheme == ByPrereleaseNumber
- #   minorVersion: '$(Build.BuildId)' # Required when versioningScheme == ByPrereleaseNumber
- #   patchVersion: '0' # Required when versioningScheme == ByPrereleaseNumber
-    #packTimezone: 'utc' # Required when versioningScheme == ByPrereleaseNumber# Options: utc, local
-    #includeSymbols: false # Optional
-    #toolPackage: # Optional
-    #buildProperties: # Optional
-    #basePath: # Optional
-    #verbosityPack: 'Detailed' # Options: quiet, normal, detailed
-    #arguments: # Required when command == Custom
 
 - task: PublishBuildArtifacts@1
   inputs:
