Added additional request permutations

--- a/Sample/DemoApp/web.config
+++ b/Sample/DemoApp/web.config
@@ -3,9 +3,9 @@
   <location path="." inheritInChildApplications="false">
     <system.webServer>
       <handlers>
-        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
           <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44364" />
